@@ -1,3 +1,35 @@
+- </>
+
+	convert k2.jpg -resize "100x100<" x.jpg
+
+		downsize, ie. factor < 1
+		does not resize
+
+	convert x.jpg -resize "200x200<" y.jpg
+
+		upsize, ie. factor > 1
+		resizes
+
+	convert k2.jpg -resize "100x100>" x.jpg
+
+		downsize, ie. factor < 1
+		resizes
+
+	convert x.jpg -resize "200x200>" y.jpg
+
+		upsize, ie. factor > 1
+		does not resize
+
+  so: < means only resize if input size is less than, > means only resize if
+  input size is > than
+
+  awkward to fit inside vipsthumbnail.c, since we'd have to copy/paste all the
+  resize calcs
+
+  have to add another param to thumbnail ... up or down, only up, only down
+
+
+
 - vipsdisp-tiny makes stripes if the image is not tagged correctly
 
   is one of the colourspace functions not reading format?
